feat : 제품별 적합도 분석 리포트 조회(테이블 정리 후 수정 예정)